# tuck-it

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
core/mcp/: auth.py  server.py
core/migrations/: 0003_backfill_orgs.py
core/models/: __init__.py  domain.py  workspace.py
core/services/: accounts.py  areas.py  bites.py  invitations.py  ranking_helpers.py  resolve.py  state.py  (+4 more)
docs/: mcp-setup.md
tests/: conftest.py  test_activity_areas.py  test_activity_bites.py  test_activity_cursor.py  test_activity_slices.py  test_admin.py  test_bootstrap.py  test_create_account_command.py  test_email_login.py  test_entitlements.py  test_env.py  test_live_endpoint.py  test_mcp_auth.py  test_mcp_e2e.py  test_mcp_oauth_auth.py  test_mcp_stateless.py  test_mcp_tool_inventory.py  test_mcp_tools_areas.py  test_mcp_tools_bites.py  test_mcp_tools_plans.py  test_mcp_tools_slices.py  test_mcp_tools_state.py  test_mcp_tools_tickets.py  test_migration_0022_dedup.py  test_migration_0031_convert.py  test_migration_0033_lifecycle.py  test_migration_0035_slice_org.py  test_migration_0037_clear_specs.py  test_migration_backfill.py  test_models.py  test_models_domain.py  test_models_org.py  test_models_plan.py  test_models_reparent.py  test_models_workspace.py  test_models_workspace_is_gone.py  test_oauth_apps.py  test_oauth_authorize.py  test_oauth_e2e.py  test_oauth_metadata.py  (+25 more)
tuckit/: asgi.py  env.py  settings.py  settings_test.py  urls.py  wsgi.py
web/: auth.py  context_processors.py  panel.py  urls.py
(+279 files in other folders)
