[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tuck-it"
version = "0.1.0"
description = "A single source of truth for a product's state, roadmap, and deferred work."
requires-python = ">=3.11"
dependencies = [
    "Django>=5.2,<5.3",
    "python-dotenv>=1.0",
    "fractional-indexing>=0.1.3",
    "mcp>=1.27,<2",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "markdown>=3.6",
    "nh3>=0.2",
    "whitenoise>=6.6",
    "gunicorn>=22.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["tuckit*"]

[tool.setuptools.package-data]
"tuckit.web" = ["templates/**/*", "static/**/*"]
